v 0.351 max datum službenog puta

--- a/putninalozi/templates/company_list.html
+++ b/putninalozi/templates/company_list.html
@@ -23,7 +23,7 @@
         <a
           class="mr-2 btn btn-info"
           href="{{ url_for('companys.company_profile', company_id=company.id) }}"
-          title="Uređivanje Kompanije"
+          title="Uređivanje kompanije"
           >{{ company.companyname }}</a
         >
       </td>
@@ -43,7 +43,7 @@
         <a
           class="mr-2 btn btn-info"
           href="{{ url_for('companys.company_profile', company_id=company.id) }}"
-          title="Uređivanje Kompanije"
+          title="Uređivanje kompanije"
           >{{ company.companyname }}</a
         >
       </td>
