--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -45,13 +45,12 @@
                     Podešavanja
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="{{ url_for('main.settings', company_id=current_user.user_company.id) }}">Osnovna podešavanja</a>
-                    <a class="dropdown-item" href="{{ url_for('companys.company_list') }}">Kompanija</a>
-                    <a class="dropdown-item" href="{{ url_for('vehicles.vehicle_list') }}">Vozila</a>
-                    <a class="dropdown-item" href="{{ url_for('users.user_list') }}">Korisnici</a>
+                    <a class="dropdown-item" href="{{ url_for('main.settings', company_id=current_user.user_company.id) }}" style="color: rgba(255,255,255,.55);">Osnovna podešavanja</a>
+                    <a class="dropdown-item" href="{{ url_for('companys.company_list') }}" style="color: rgba(255,255,255,.55);">Kompanija</a>
+                    <a class="dropdown-item" href="{{ url_for('vehicles.vehicle_list') }}" style="color: rgba(255,255,255,.55);">Vozila</a>
+                    <a class="dropdown-item" href="{{ url_for('users.user_list') }}" style="color: rgba(255,255,255,.55);">Korisnici</a>
                   </div>
                 </li>
-                  
                 <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
                 {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
