--- a/putninalozi/templates/register_u.html
+++ b/putninalozi/templates/register_u.html
@@ -32,7 +32,6 @@
                         {% endif %}
                     </div>
                 </div>
-
                 <div class="row just-column">
                     <div class="col form-group">
                         {{ form.gender.label(class="form-control-label") }}
@@ -61,92 +60,104 @@
                         {% endif %}
                     </div>
                     <div class="col form-group">
-                      {{ form.password.label(class="form-control-label") }}
-                      {% if form.password.errors %}
-                          {{ form.password(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.password.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.password(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
-                  <div class="col form-group">
-                      {{ form.workplace.label(class="form-control-label") }}
-                      {% if form.workplace.errors %}
-                          {{ form.workplace(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.workplace.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.workplace(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
+                        {{ form.password.label(class="form-control-label") }}
+                        {% if form.password.errors %}
+                            {{ form.password(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.password.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.password(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="col form-group">
+                        {{ form.workplace.label(class="form-control-label") }}
+                        {% if form.workplace.errors %}
+                            {{ form.workplace(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.workplace.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.workplace(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
                 </div>
-
                 <div class="row just-column">
-                  <div class="col form-group">
-                      {{ form.authorization.label(class="form-control-label") }}
-                      {% if form.authorization.errors %}
-                          {{ form.authorization(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.authorization.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.authorization(class="form-select form-select-lg") }}
-                      {% endif %}
-                  </div>
+                    <div class="col form-group">
+                        {{ form.authorization.label(class="form-control-label") }} <span title="Detaljniji opis: &#10;Zaposleni (firme): pregled liste svojih putnih naloga, izmena svojih putnih naloga, promena statusa svojih putnih naloga &#10;Član (uduženja): pregled liste svojih putnih naloga, izmena svojih putnih naloga, promena statusa svojih putnih naloga &#10;Knjigovođa/Blagajnik: opis krnjgovođe &#10;Nalogodavac: opis Nalogodavca &#10; ...">(i)</span>
+                        {% if form.authorization.errors %}
+                            {{ form.authorization(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.authorization.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.authorization(class="form-select form-select-lg", title="Detaljniji opis: 
+Zaposleni (firme) // Član (uduženja):     
+    -pregled liste svojih putnih naloga, 
+    -izmena svojih putnih naloga, 
+    -promena statusa svojih putnih naloga
+Knjigovođa/Blagajnik // Admin:   
+    -pregled liste svih naloga u kompaniji, izmene svih putnih naloga u kompaniji, promena statusa svih putnih naloga, kreiranje novog putnog naloga;
+    -izmena podataka kompanije;
+    -pregled liste svih vozila u kompaniji, izmena svih vozila u kompanji, kreiranje novog vozila u kompaniji;
+    -pregled liste svih korisnika u kompanji, izmena svih korisnika u kompanji, kreiranje novog korisnika u kompanji;
+Nalogodavac // Osnivač:            
+    -pregled liste svih naloga u kompaniji, izmene svih putnih naloga u kompaniji, promena statusa svih putnih naloga, kreiranje novog putnog naloga;
+    -izmena podataka kompanije;
+    -pregled liste svih vozila u kompaniji, izmena svih vozila u kompanji, kreiranje novog vozila u kompaniji;
+    -pregled liste svih korisnika u kompanji, izmena svih korisnika u kompanji, kreiranje novog korisnika u kompanji;
+    -nalazi se u spisku nalogodavaca") }}
+                        {% endif %}
+                    </div>
                 </div>
-
                 <div class="row just-column">
-                  
-                  <div class="col form-group">
-                      {{ form.default_vehicle.label(class="form-control-label") }}
-                      {% if form.default_vehicle.errors %}
-                          {{ form.default_vehicle(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.default_vehicle.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.default_vehicle(class="form-select form-select-lg") }}
-                      {% endif %}
-                  </div>
+                    <div class="col form-group">
+                        {{ form.default_vehicle.label(class="form-control-label") }}
+                        {% if form.default_vehicle.errors %}
+                            {{ form.default_vehicle(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.default_vehicle.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.default_vehicle(class="form-select form-select-lg") }}
+                        {% endif %}
+                    </div>
                 </div>
 
 
                 {% if current_user.authorization == 's_admin'%}
-                  <div class="form-group">
-                      {{ form.company_id.label(class="form-control-label") }}
-                      {% if form.company_id.errors %}
-                          {{ form.company_id(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.company_id.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.company_id(class="form-select form-select-lg") }}
-                      {% endif %}
-                  </div>
+                    <div class="form-group">
+                        {{ form.company_id.label(class="form-control-label") }}
+                        {% if form.company_id.errors %}
+                            {{ form.company_id(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.company_id.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.company_id(class="form-select form-select-lg") }}
+                        {% endif %}
+                    </div>
                 {% else %}
-                  {{ form.company_id(class="sr-only form-select form-select-lg") }}
+                    {{ form.company_id(class="sr-only form-select form-select-lg") }}
                 {% endif %}
 
 
             </fieldset>
             <div class="form-group">
-              <a class="btn btn-info" href="{{url_for('users.user_list')}}">Nazad</a>
-          {{ form.submit(class="btn btn-outline-info") }}
-        </div>
-      </form>
+                <a class="btn btn-info" href="{{url_for('users.user_list')}}">Nazad</a>
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+        </form>
     </div>
     <script>document.body.classList.add('register-u');</script>
 {% endblock content%}
